--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "helmet": "^3.13.0",
     "mongoose": "^5.2.2",
     "multer": "^1.3.1"
   }
